--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,13 @@
-
+services:
+  - type: worker
+    name: cozyasia-telegram-gpt-consultant
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python main.py"
+    envVars:
+      - key: TELEGRAM_BOT_TOKEN
+        sync: false
+      - key: OPENAI_API_KEY
+        sync: false
+      - key: OPENAI_MODEL
+        value: gpt-4o-mini
