--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ python-telegram-bot[webhooks]==21.4
 requests>=2.32.0
 gspread>=6.0.0
 google-auth>=2.30.0
-aiohttp>=3.9.5  # для webhook-сервера PTB
+telethon>=1.33.1
+# aiohttp ставится автоматически с [webhooks], но оставить можно
+aiohttp>=3.9.5
