--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-python-telegram-bot==21.4
+python-telegram-bot[webhooks]==21.4
 gspread==6.1.2
 google-auth==2.34.0
-httpx==0.27.2
 requests==2.32.3
