--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-python-telegram-bot[webhooks]==21.4
-gspread==6.1.2
-google-auth==2.34.0
+python-telegram-bot[webhooks]==21.6
+gspread==6.0.2
+google-auth==2.31.0
+cachetools==5.4.0
+oauthlib==3.2.2
 requests==2.32.3
