--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 python-telegram-bot[webhooks]==21.6
-openai>=1.40.0
+requests==2.32.3
 python-dateutil==2.9.0.post0
 gspread==6.0.2
 google-auth==2.31.0
+google-auth-oauthlib==1.2.0
 cachetools==5.4.0
-oauthlib==3.2.2
-requests==2.32.3
+rsa==4.9
+openai>=1.40.0
