--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-python-telegram-bot==20.7
-gspread==6.0.2
-google-auth==2.32.0
-google-auth-oauthlib==1.2.0
-cachetools==5.4.0
-oauthlib==3.2.2
-requests==2.32.3
-httpx==0.27.2
-openai==1.42.0
-dateparser==1.2.0
-python-dateutil==2.9.0.post0
+python-telegram-bot>=20.7,<21.0
+gspread>=6.0.2,<7.0.0
+google-auth>=2.32.0,<3.0.0
+google-auth-oauthlib>=1.2.0,<2.0.0
+cachetools>=5.4.0,<6.0.0
+oauthlib>=3.2.2,<4.0.0
+requests>=2.32.3,<3.0.0
+httpx>=0.27.0,<0.29.0
+openai>=1.42.0,<2.0.0
+dateparser>=1.2.0,<2.0.0
+python-dateutil>=2.9.0,<3.0.0
