--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ google-auth==2.32.0
 google-auth-oauthlib==1.2.0
 cachetools==5.4.0
 requests==2.32.3
-openai==1.42.0
+openai>=1.42.0,<2.0.0
 python-dateutil==2.9.0
 dateparser==1.2.0
 fastapi==0.112.2
